--- a/notes/Kalman-filters/3.Lidar-and-Radar-KF.md
+++ b/notes/Kalman-filters/3.Lidar-and-Radar-KF.md
@@ -26,3 +26,37 @@ Compiling with:
 ```
 g++ /usr/local/include/eigen3 tracking_1D.cpp
 ```
+
+### State prediction
+Consider 2D position and 2D velocity. Let $$ x = \bmatrix(p_x p_y v_x v_y} $$. We can use the linear motion model:
+```
+p_x' = p_x + v_x*dt + nu_px
+p_y' = p_y + v_y*dt + nu_py
+v_x' = v_x + nu_vx
+v_y' = v_y + nu_vy
+```
+We can find F from this since we know x' = Fx + noise. Remember, this is a constant velocity model though we know in reality the velocity can change based on acceleration. This acceleration is modeled as process noise.
+
+### Process Covariance Matrix
+How do we choose the values of \sigma_ax^2 and \sigma_ay^2? For this example, we know that acceleration is being modeled as a process noise. That means we can analytically derive an expression for Q.
+
+The Q matrix would include `dt` to account for the fact that as more time passes, we become more uncertain about the position/velocity.
+```
+Q = [dt^4/4 * sigma2_ax, 0, dt^3/2 * sigma2_ax, 0; 0, dt^4/4 * sigma2_ay, 0, dt^3/2 * sigma2_ax; dt^3/2 * sigma2_ax, 0, dt^2 * sigma2_ax, 0; 0; dt^3/2 * sigma^2_ay; 0; dt^2 * sigma2_ay ]
+```
+The random acceleration vector nu would be nu = [nu_px; nu_py; nu_vx; nu_vy]
+```
+nu_px = a_x*dt^2/2
+nu_py = a_y*dt^2/2
+nu_vx = a_x*dt
+nu_vy = a_y*dt
+```
+An alternative way to represent nu is decomposing it into 2 matrices. A 4x2 matrix G and a 2x1 matrix a. This separates the random variables.
+```
+G = [dt^2/2, 0; 0, dt^2/2; dt, 0; 0, dt];
+a = [a_x; a_y];
+```
+Note: Q_nu is a 2x2 covariance matrix of the individual process noise. Q is G * Q_nu * G^T
+
+## Measurement Model
+For a LIDAR, `z = Hx` where `z = [px, py]`
